--- a/src/components/Editor/editor.css
+++ b/src/components/Editor/editor.css
@@ -1,15 +1,41 @@
-.section {
-  position: relative;
-  z-index: 2;
-  /* padding: var(--control-space-s) calc(var(--control-space-m) / 2); */
-  height: fit-content;
-  flex-grow: 1;
-  background: transparent;
-  /* border: var(--control-border-width) solid var(--color-control-bg-border-default); */
-  /* border-radius: var(--control-radius); */
-  cursor: text;
+.codex-editor--narrow .ce-toolbar__actions {
+  right: 100%;
 }
 
+/* 이건 에디터 전체 */
+/* TODO: Media width query */
+.codex-editor__redactor {
+  padding-top: 6px;
+  padding-bottom: 6px;
+  min-height: 170px;
+  width: 100%;
+  /* max-width: 752px; */
+  min-width: 652px;
+  /* margin: 0 minmax(96px, auto); */
+  /* margin: 0 96px 0 96px; */
+}
+
+/* 이거는 좌우 마진 포함 블럭 */
+/* .ce-block {
+  max-width: 700px;
+} */
+
+/* 블럭 안에 컨텐츠 */
+.ce-block .ce-block__content {
+  transition: background-color 20ms ease-in;
+  padding-left: 4px;
+  padding-right: 4px;
+  /* max-width: 708px; */
+
+  width: minmax(auto, 708px);
+
+  margin: 0 clamp(96px, 120px, auto);
+}
+
+.ce-block__content:hover {
+  border-radius: 4px;
+  background-color: rgba(55, 53, 47, 0.06);
+}
 /* disable block converting -> THIS IS MAKING UNEXCEPECTED BEHAVIORS */
 div.ce-popover__items {
   div.ce-popover-item[data-item-name='convert-to'] {
